@@ -1,5 +1,10 @@
 2009-12-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* commands/memrw.c (grub_cmd_write): Support for mask parameter.
+	(GRUB_MOD_INIT(memrw)): Update help line.
+
+2009-12-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* commands/memrw.c (cmd_read_byte, cmd_read_word, cmd_read_dword):
 	Use grub_extcmd_t. All users updated.
 	(options): New variable.
